<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Lift" Id="{2a245fe6-c2a2-4b28-b5f1-37ac7291753f}">
    <Declaration><![CDATA[TYPE Lift :
STRUCT
	roller : Roller;
	power_axis	: BOOL;
	contactor_axis : BOOL;	
	mcAxis 					: FB_MotionAxis_MC;
	st_mcAxis 				: ST_MotionAxis_MC;
	AxisRef					: AXIS_REF;
	valve_perturbation : ARRAY [0..3] OF Valve;
	valve_clamp	:Valve;
	photo_sensor :ARRAY[0..1]OF FB_PhotoSensor;
	limit_sensor : ARRAY[0..2]OF BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>